--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,13 @@ julia:
   - 0.5
   - nightly
 
+script:
+  - julia -e 'Pkg.clone(pwd())'
+  - julia -e 'Pkg.build("$name")'
+  - if [ -f test/runtests.jl ]; then
+      travis_wait 30 julia --check-bounds=yes -e 'Pkg.test("$name", coverage=true)'
+    fi
+
 matrix:
   allow_failures:
     - julia: nightly
