--- a/.travis.yml
+++ b/.travis.yml
@@ -15,9 +15,9 @@ julia:
 
 script:
   - julia -e 'Pkg.clone(pwd())'
-  - julia -e 'Pkg.build(\"${JL_PKG}\")'
+  - julia -e 'Pkg.build("ValidatedNumerics")
   - if [ -f test/runtests.jl ]; then
-      travis_wait 30 julia --check-bounds=yes -e 'Pkg.test(\"${JL_PKG}\", coverage=true)'
+      travis_wait 30 julia --check-bounds=yes -e 'Pkg.test("ValidatedNumerics", coverage=true)'
     fi
 
 matrix:
