Tweak Travis script

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,8 @@ julia:
   - nightly
 
 script:
-  - julia -e 'Pkg.clone(pwd())'
-  - julia -e 'Pkg.build("ValidatedNumerics")'
-  - if [ -f test/runtests.jl ]; then
-      travis_wait 30 julia --check-bounds=yes -e 'Pkg.test("ValidatedNumerics", coverage=true)'
-    fi
+  - travis_wait 30 julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("ValidatedNumerics"); Pkg.test("ValidatedNumerics", coverage=true)'
+
 
 matrix:
   allow_failures:
