--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ julia:
   - nightly
 
 script:
-  - travis_wait 30 julia --check-bounds=yes -e 'Pkg.clone(pwd()); Pkg.build("ValidatedNumerics"); Pkg.test("ValidatedNumerics", coverage=true)'
+  - travis_wait 30 julia -e 'Pkg.clone(pwd()); Pkg.build(\"ValidatedNumerics\"); Pkg.test(\"ValidatedNumerics\", coverage=true)'
 
 
 matrix:
