--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,12 @@ sudo: required
 services:
   - docker
 
+addons:
+  apt:
+    packages:
+    - bar
+    - moreutils
+
 os:
   - linux
 
@@ -14,7 +20,7 @@ julia:
   - nightly
 
 script:
-  - travis_wait 30 julia -e 'Pkg.clone(pwd()); Pkg.build(\"ValidatedNumerics\"); Pkg.test(\"ValidatedNumerics\", coverage=true)'
+  - mispipe "julia -e 'Pkg.clone(pwd()); Pkg.build(\"ValidatedNumerics\"); Pkg.test(\"ValidatedNumerics\", coverage=true)'" bar
 
 
 matrix:
