--- a/.travis.yml
+++ b/.travis.yml
@@ -14,10 +14,10 @@ julia:
   - 0.6
   - nightly
 
-matrix:
-  allow_failures:
-    - julia: 0.6
-    - julia: nightly
+# matrix:
+#   allow_failures:
+#     - julia: 0.6
+#     - julia: nightly
 
 notifications:
   email: false
