--- a/Project.toml
+++ b/Project.toml
@@ -13,12 +13,12 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 TaylorModels = "314ce334-5f6e-57ae-acf6-00b6e903104a"
 
 [compat]
-IntervalArithmetic = "0.16, 0.17, 0.18"
+IntervalArithmetic = "0.16, 0.17, 0.18, 0.19, 0.20"
 IntervalRootFinding = "0.5"
 IntervalContractors = "0.4"
 IntervalConstraintProgramming = "0.12"
 IntervalOptimisation = "0.4"
-TaylorModels = "0.3"
+TaylorModels = "0.6"
 Reexport = "0.2, 1.0"
 julia = "1.3, 1.4, 1.5, 1.6"
 
