--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ValidatedNumerics"
 uuid = "d621b6e3-7715-5857-9c6f-c67000ef6083"
 repo = "https://github.com/JuliaIntervals/ValidatedNumerics.jl.git"
-version = "0.12.0"
+version = "0.12.1"
 
 [deps]
 IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
@@ -20,7 +20,7 @@ IntervalConstraintProgramming = "0.12"
 IntervalOptimisation = "0.4"
 TaylorModels = "0.6"
 Reexport = "0.2, 1.0"
-julia = "1.3, 1.4, 1.5, 1.6"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
