--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "ValidatedNumerics"
 uuid = "d621b6e3-7715-5857-9c6f-c67000ef6083"
 repo = "https://github.com/JuliaIntervals/ValidatedNumerics.jl.git"
-version = "0.12.0"
+version = "0.12.1"
 
 [deps]
 IntervalArithmetic = "d1acc4aa-44c8-5952-acd4-ba5d80a2a253"
@@ -13,14 +13,14 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 TaylorModels = "314ce334-5f6e-57ae-acf6-00b6e903104a"
 
 [compat]
-IntervalArithmetic = "0.16, 0.17, 0.18"
+IntervalArithmetic = "0.16, 0.17, 0.18, 0.19, 0.20"
 IntervalRootFinding = "0.5"
 IntervalContractors = "0.4"
 IntervalConstraintProgramming = "0.12"
 IntervalOptimisation = "0.4"
-TaylorModels = "0.3"
+TaylorModels = "0.6"
 Reexport = "0.2, 1.0"
-julia = "1.3, 1.4, 1.5, 1.6"
+julia = "1.6"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
